# synthetic-experiment-framework

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
docs/: advanced_features.md  generate_docs.py  getting_started.md  political_polarization_tutorial.md  user_guide.md
docs/api/: conf.py  index.rst  modules.rst
examples/: bail2018_pre_post.py
examples/political_polarization/: config.yaml  run_experiment.py
examples/political_polarization/personas/: challenging_advisor.yaml  conservative_user.yaml  empathetic_advisor.yaml  liberal_user.yaml  moderate_user.yaml  neutral_advisor.yaml
synthetic_experiments/: __init__.py  branching.py  comparison.py  continuation.py  costs.py  export.py  parallel.py  rate_limiting.py  stopping.py  streaming.py  widgets.py
synthetic_experiments/agents/: __init__.py  agent.py  persona.py
synthetic_experiments/analysis/: __init__.py  metrics.py  political.py  survey.py  visualization.py
synthetic_experiments/cli/: __init__.py  main.py
synthetic_experiments/data/: __init__.py  logger.py  storage.py
synthetic_experiments/experiments/: __init__.py  config.py  experiment.py
synthetic_experiments/providers/: __init__.py  base.py  claude.py  ollama.py  openai.py
tests/: __init__.py  conftest.py  test_cli.py  test_integration.py  test_survey.py  test_survey_integration.py
tests/test_agents/: test_agent.py  test_persona.py
tests/test_analysis/: test_metrics.py  test_political.py
tests/test_data/: test_logger.py  test_storage.py
tests/test_experiments/: __init__.py  test_config.py  test_experiment.py
tests/test_providers/: test_base.py  test_claude.py  test_ollama.py  test_openai.py
tests/utils/: helpers.py
